zod-rs/zod-rs-macros/tests/snapshots/snapshot_tests__basic_struct_schema.snap
---
source: zod-rs-macros/tests/snapshot_tests.rs
expression: "User::zod_schema()"
---
z.object({

  name: z.string(),
  age: z.number().int().nonnegative(),
  active: z.boolean()
})
