zod-rs/zod-rs-macros/tests/snapshots/snapshot_tests__field_defaults.snap
---
source: zod-rs-macros/tests/snapshot_tests.rs
expression: "Settings::zod_schema()"
---
z.object({

  language: z.string().default("en"),
  notifications: z.boolean().default(true),
  page_size: z.number().int().nonnegative().default(10)
})
