zod-rs/zod-rs-macros/tests/snapshots/snapshot_tests__field_optional_nullable.snap
---
source: zod-rs-macros/tests/snapshot_tests.rs
expression: "Profile::zod_schema()"
---
z.object({

  name: z.string(),
  bio: z.string().optional(),
  avatar_url: z.string().nullable(),
  nickname: z.string().optional()
})
