zod-rs/zod-rs-macros/tests/snapshots/snapshot_tests__field_rename.snap
---
source: zod-rs-macros/tests/snapshot_tests.rs
expression: "ApiResponse::zod_schema()"
---
z.object({

  statusCode: z.number().int().nonnegative(),
  responseBody: z.string()
})
