zod-rs/zod-rs-macros/tests/snapshots/snapshot_tests__nested_struct.snap
---
source: zod-rs-macros/tests/snapshot_tests.rs
expression: "Company::zod_schema()"
---
z.object({

  name: z.string(),
  address: AddressSchema,
  employees: z.array(z.string())
})
